--- a/escuela-config-client/src/main/resources/bootstrap.yml
+++ b/escuela-config-client/src/main/resources/bootstrap.yml
@@ -1,8 +1,12 @@
 spring:
   application:
-    name: escuela-config-client
-  cloud:    config:      uri:      - http://localhost:8081
+    name: compania
+  cloud:    config:      uri:      - http://localhost:8081 #IP y puerto del Servidor de Configuración
   #profiles:
   #  active:
   #  - dev
-server:  port: 8082
+server:  port: ${PORT:${SERVER_PORT:0}} #Anteriormente puerto estático de 8082
+
+eureka:
+  instance:
+    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
