--- a/compania-ms/src/main/resources/bootstrap.yml
+++ b/compania-ms/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: compania
+    name: compania-ms
   cloud:    config:      uri:      - http://localhost:8081 #IP y puerto del Servidor de Configuración
   #profiles:
   #  active:
