--- a/ordenes-ms/src/main/resources/bootstrap.yml
+++ b/ordenes-ms/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: almacen-ms
+    name: ordenes-ms
   cloud:
     config:
       uri:
@@ -9,7 +9,7 @@ spring:
   #  active:
   #  - dev
 server:
-  port: ${PORT:${SERVER_PORT:0}} #Anteriormente puerto estático de 8083
+  port: ${PORT:${SERVER_PORT:0}} #Anteriormente puerto estático de 8082
 
 eureka:
   instance:
