--- a/ordenes-ms/src/main/resources/application.yml
+++ b/ordenes-ms/src/main/resources/application.yml
@@ -10,3 +10,8 @@ spring:
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     #open-in-view : false
+management:
+  endpoints:
+    web:
+      exposure:
+       include: hystrix.stream
