--- a/escuela-config-server/pom.xml
+++ b/escuela-config-server/pom.xml
@@ -62,6 +62,10 @@
 			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
